[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/cards/tex_card_c_2.png" type="Texture" id=1]
[ext_resource path="res://textures/cards/tex_card_selected.png" type="Texture" id=2]
[ext_resource path="res://textures/cards/tex_deck_3.png" type="Texture" id=3]
[ext_resource path="res://scripts/gameplay/scr_card.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 198.5, 307.5 )

[node name="Card" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Selected" type="TextureRect" parent="."]
margin_left = -2.0
margin_top = -2.0
margin_right = 397.0
margin_bottom = 613.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Back" type="TextureRect" parent="."]
margin_right = 390.0
margin_bottom = 606.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Front" type="TextureRect" parent="."]
margin_right = 390.0
margin_bottom = 606.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 198.5, 305.5 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Card_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Card_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
